# simple_cov_badge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: discord.yml  docker-publish.yml  multi-arch-docker-pupblish.yml  test.yml
tests/: test_main.py
